fixed logo on smaller mobile screen

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -17,7 +17,7 @@
 }
 
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 300px) {
 	#header-wrap #logo img {
 		height: 70px;
 	}
